// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioOption /> shoudl call deleteRadioOptionBehaviour when button is clicked 1`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <div
      className="prompt-item"
    >
      <input
        className="prompt-input"
        id="option-name-input"
        onChange={[Function]}
        placeholder="Yes"
        type="text"
        value="yes"
      />
      <DeleteIcon
        id="option-del-icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="behaviour-container"
    >
      <div
        className="set-behaviour-btn-container"
      />
      <div>
        <div>
          <div
            className="remove-set-behaviour"
          >
             
            <span>
              <ContextMenu
                classNames="table__menu-container"
              >
                <MenuItem
                  classNames="delete"
                  onClick={[Function]}
                >
                  Delete behaviour
                </MenuItem>
              </ContextMenu>
            </span>
            Upon selecting Option 1, enable
          </div>
          <Behaviours
            optionId=""
            order={1}
            type=""
            updateBehaviour={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioOption /> should render RenderCheckbox component properly 1`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <div
      className="prompt-item"
    >
      <input
        className="prompt-input"
        id="option-name-input"
        onChange={[Function]}
        placeholder="Yes"
        type="text"
        value="yes"
      />
      <DeleteIcon
        id="option-del-icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="behaviour-container"
    >
      <div
        className="set-behaviour-btn-container"
      >
        <button
          className="set-behaviour-btn"
          onClick={[Function]}
          type="button"
        >
          Set behaviour
        </button>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`<RadioOption /> should render RenderCheckbox component properly 2`] = `
<div>
  <div>
    <p>
      Enter Option 1
    </p>
    <div
      className="prompt-item"
    >
      <input
        className="prompt-input"
        id="option-name-input"
        onChange={[Function]}
        placeholder="Yes"
        type="text"
        value="yes"
      />
      <button
        className="builder-delete-icon"
        id="option-del-icon"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete-icon"
          src="delete-icon.svg"
        />
      </button>
    </div>
    <div
      className="behaviour-container"
    >
      <div
        className="set-behaviour-btn-container"
      >
        <button
          className="set-behaviour-btn"
          onClick={[Function]}
          type="button"
        >
          Set behaviour
        </button>
      </div>
      <div />
    </div>
  </div>
</div>
`;
